main/assets/css/style.css
/* ... */
html {
  box-sizing: border-box; }

body {
  background-color: var(--color-bg, white); }

article, aside, details, figcaption, figure,
footer, header, hgroup, menu, nav, section, main, form legend {
  display: block; }

ol, ul {
  list-style: none; }

blockquote, q {
  quotes: none; }

button, input, textarea, select {
  margin: 0; }

.btn, .form-control, .link, .reset {
  background-color: transparent;
  padding: 0;
  border: 0;
  border-radius: 0;
  color: inherit;
  line-height: inherit;
  -webkit-appearance: none;
     -moz-appearance: none;
          appearance: none; }

select.form-control::-ms-expand {
  display: none; }

textarea {
  resize: vertical;
  overflow: auto;
  vertical-align: top; }

input::-ms-clear {
  display: none; }

table {
  border-collapse: collapse;
  border-spacing: 0; }

img, video, svg {
  max-width: 100%; }

[data-theme] {
  background-color: var(--color-bg, white);
  color: var(--color-contrast-high, #313135); }

:root {
  --space-unit:  1em; }

:root, * {
  --space-xxxxs: calc(0.125 * var(--space-unit));
  --space-xxxs:  calc(0.25 * var(--space-unit));
  --space-xxs:   calc(0.375 * var(--space-unit));
  --space-xs:    calc(0.5 * var(--space-unit));
  --space-sm:    calc(0.75 * var(--space-unit));
  --space-md:    calc(1.25 * var(--space-unit));
  --space-lg:    calc(2 * var(--space-unit));
  --space-xl:    calc(3.25 * var(--space-unit));
  --space-xxl:   calc(5.25 * var(--space-unit));
  --space-xxxl:  calc(8.5 * var(--space-unit));
  --space-xxxxl: calc(13.75 * var(--space-unit));
  --component-padding: var(--space-md); }

.container {
  width: calc(100% - 2*var(--component-padding));
  margin-left: auto;
  margin-right: auto; }

.grid {
  --gap: 0px;
  --gap-x: var(--gap);
  --gap-y: var(--gap);
  --offset: var(--gap-x);
  display: flex;
  flex-wrap: wrap; }
  .grid > * {
    flex-basis: 100%;
    max-width: 100%;
    min-width: 0; }

/* #region (fallback for older browsers) */
[class*="gap-xxxxs"], [class*="gap-xxxs"], [class*="gap-xxs"], [class*="gap-xs"], [class*="gap-sm"], [class*="gap-md"], [class*="gap-lg"], [class*="gap-xl"], [class*="gap-xxl"], [class*="gap-xxxl"], [class*="gap-xxxxl"], [class*="grid-gap-"], [class*="flex-gap-"] {
  margin-bottom: -0.75em;
  margin-left: -0.75em; }
  [class*="gap-xxxxs"] > *, [class*="gap-xxxs"] > *, [class*="gap-xxs"] > *, [class*="gap-xs"] > *, [class*="gap-sm"] > *, [class*="gap-md"] > *, [class*="gap-lg"] > *, [class*="gap-xl"] > *, [class*="gap-xxl"] > *, [class*="gap-xxxl"] > *, [class*="gap-xxxxl"] > *, [class*="grid-gap-"] > *, [class*="flex-gap-"] > * {
    margin-bottom: 0.75em;
    margin-left: 0.75em; }

[class*="gap-x-xxxxs"], [class*="gap-x-xxxs"], [class*="gap-x-xxs"], [class*="gap-x-xs"], [class*="gap-x-sm"], [class*="gap-x-md"], [class*="gap-x-lg"], [class*="gap-x-xl"], [class*="gap-x-xxl"], [class*="gap-x-xxxl"], [class*="gap-x-xxxxl"] {
  margin-left: -0.75em; }
  [class*="gap-x-xxxxs"] > *, [class*="gap-x-xxxs"] > *, [class*="gap-x-xxs"] > *, [class*="gap-x-xs"] > *, [class*="gap-x-sm"] > *, [class*="gap-x-md"] > *, [class*="gap-x-lg"] > *, [class*="gap-x-xl"] > *, [class*="gap-x-xxl"] > *, [class*="gap-x-xxxl"] > *, [class*="gap-x-xxxxl"] > * {
    margin-left: 0.75em; }

[class*="gap-y-xxxxs"], [class*="gap-y-xxxs"], [class*="gap-y-xxs"], [class*="gap-y-xs"], [class*="gap-y-sm"], [class*="gap-y-md"], [class*="gap-y-lg"], [class*="gap-y-xl"], [class*="gap-y-xxl"], [class*="gap-y-xxxl"], [class*="gap-y-xxxxl"] {
  margin-bottom: -0.75em; }
  [class*="gap-y-xxxxs"] > *, [class*="gap-y-xxxs"] > *, [class*="gap-y-xxs"] > *, [class*="gap-y-xs"] > *, [class*="gap-y-sm"] > *, [class*="gap-y-md"] > *, [class*="gap-y-lg"] > *, [class*="gap-y-xl"] > *, [class*="gap-y-xxl"] > *, [class*="gap-y-xxxl"] > *, [class*="gap-y-xxxxl"] > * {
    margin-bottom: 0.75em; }
/* ... */

